--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -239,6 +239,14 @@
                     </div>
                 </a>
 
+                <a href="first-last.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-menu"><i class="fa-solid fa-clock"></i> First & Last Train Timings</h5>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
