--- a/delays-tracker/first-last.html
+++ b/delays-tracker/first-last.html
@@ -33,7 +33,7 @@
 
     <style>
         .selector-section {
-            background: white;
+            background: #fff;
             border-radius: 12px;
             padding: 20px;
             margin-bottom: 30px;
@@ -43,32 +43,39 @@
         .selector-section label {
             display: block;
             font-weight: 600;
+            margin-top: 3em;
             margin-bottom: 10px;
-            color: #333;
+            color: #000;
         }
 
         #stationDropdown {
+            display: block;
             width: 100%;
-            padding: 12px;
+            padding: 0.775rem 2.5rem 0.775rem 1.75rem;
+            margin-top: 5px;
             font-size: 1rem;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: border-color 0.3s;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #000;
+            appearance: none;
+            background-color: #ffffff;
+            background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23607d96" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"%3E%3Cpolyline points="6 9 12 15 18 9"%3E%3C/polyline%3E%3C/svg%3E');
+            background-position: right 0.75rem center;
+            background-repeat: no-repeat;
+            background-size: 1.2rem;
+            background-clip: padding-box;
+            border-radius: 25px;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         #stationDropdown:hover {
-            border-color: #667eea;
-        }
-
-        #stationDropdown:focus {
-            outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #607d96;
         }
 
         .content-section {
-            background: white;
+            background: #fff;
             border-radius: 12px;
             padding: 30px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
@@ -104,20 +111,22 @@
             padding: 20px;
             background: #f9f9f9;
             transition: all 0.3s;
+            margin-bottom: 1em;
+            margin-top: 1em;
         }
 
         .direction-card:hover {
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-color: #667eea;
+            border-color: #607d96;
         }
 
         .direction-header {
             font-weight: 600;
             font-size: 1rem;
-            color: #667eea;
+            color: #607d96;
             margin-bottom: 15px;
             padding-bottom: 10px;
-            border-bottom: 2px solid #667eea;
+            border-bottom: 2px solid #607d96;
         }
 
         .time-row {
@@ -141,7 +150,7 @@
         }
 
         .time-value {
-            background: white;
+            background: #fff;
             padding: 5px 8px;
             border-radius: 4px;
             text-align: center;
@@ -164,7 +173,7 @@
 
         .loading {
             text-align: center;
-            color: #667eea;
+            color: #607d96;
             padding: 40px 20px;
         }
 
@@ -173,43 +182,66 @@
             width: 40px;
             height: 40px;
             border: 4px solid #f3f3f3;
-            border-top: 4px solid #667eea;
+            border-top: 4px solid #607d96;
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         .search-container {
             position: relative;
             margin-bottom: 15px;
+            height: 40px;
+        }
+
+        .search-input-wrapper {
+            position: relative;
+            height: 100%;
         }
 
         .search-input {
+            display: block;
             width: 100%;
-            padding: 12px 40px 12px 12px;
+            padding: 0.6rem 1.75rem 0.6rem 35px;
             font-size: 1rem;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            transition: border-color 0.3s;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #d3d3d3;
+            appearance: none;
+            background-color: #ffffff;
+            background-clip: padding-box;
+            border-radius: 25px;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            border: 1px solid #2b2b2b33;
+            box-sizing: border-box;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+            height: 50px;
         }
 
         .search-input:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: #607d96;
             box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
         }
 
         .search-icon {
             position: absolute;
-            right: 12px;
+            left: 12px;
             top: 50%;
             transform: translateY(-50%);
-            color: #999;
+            color: #cccccc;
             pointer-events: none;
+            z-index: 1;
+            font-size: 1rem;
         }
 
         .clear-search {
@@ -228,7 +260,7 @@
         }
 
         .clear-search:hover {
-            color: #667eea;
+            color: #607d96;
         }
 
         .clear-search.visible {
@@ -238,7 +270,9 @@
         .search-results-count {
             font-size: 0.85rem;
             color: #999;
-            margin-top: 8px;
+            margin-top: 1em;
+            display: block;
+            margin-left: 0;
         }
 
         .stations-grid {
@@ -257,7 +291,7 @@
 
         .station-card:hover {
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-color: #667eea;
+            border-color: #607d96;
         }
 
         .station-name {
@@ -266,7 +300,7 @@
             color: #333;
             margin-bottom: 15px;
             padding-bottom: 10px;
-            border-bottom: 2px solid #667eea;
+            border-bottom: 2px solid #607d96;
         }
 
         .time-item {
@@ -283,7 +317,7 @@
         }
 
         .time-display {
-            background: white;
+            background: #fff;
             padding: 4px 10px;
             border-radius: 4px;
             font-weight: 600;
@@ -298,6 +332,168 @@
         .time-display.last {
             color: #e74c3c;
         }
+
+
+        body.dark-mode .selector-section {
+            background: #2e2e2e;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .selector-section label {
+            color: #fff;
+        }
+
+        body.dark-mode #stationDropdown {
+            display: block;
+            width: 100%;
+            padding: 0.775rem 2.5rem 0.775rem 1.75rem;
+            color: #fff;
+            appearance: none;
+            background-color: #3a3a3a;
+            background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%2391a5be" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"%3E%3Cpolyline points="6 9 12 15 18 9"%3E%3C/polyline%3E%3C/svg%3E');
+            background-position: right 0.75rem center;
+            background-repeat: no-repeat;
+            background-size: 1.2rem;
+            background-clip: padding-box;
+            border-radius: 25px;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode #stationDropdown:hover {
+            border-color: #91a5be;
+        }
+
+        body.dark-mode #stationDropdown:focus {
+            border-color: #91a5be;
+            box-shadow: 0 0 0 3px rgba(136, 153, 255, 0.1);
+        }
+
+        body.dark-mode .content-section {
+            background: #2e2e2e;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .station-title {
+            color: #fff;
+        }
+
+        body.dark-mode .station-subtitle {
+            color: #bbb;
+        }
+
+        body.dark-mode .direction-card {
+            background: #3a3a3a;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .direction-card:hover {
+            border-color: #91a5be;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        body.dark-mode .direction-header {
+            color: #91a5be;
+            border-bottom-color: #91a5be;
+        }
+
+        body.dark-mode .time-row {
+            border-bottom-color: #444;
+        }
+
+        body.dark-mode .day-label {
+            color: #ccc;
+        }
+
+        body.dark-mode .no-data {
+            color: #777;
+        }
+
+        body.dark-mode .loading {
+            color: #91a5be;
+        }
+
+        body.dark-mode .search-input {
+            display: block;
+            width: 100%;
+            color: #fff;
+            appearance: none;
+            background: #3a3a3a;
+            background-clip: padding-box;
+            border-radius: 25px;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .search-input::placeholder {
+            color: #fff;
+        }
+
+        body.dark-mode .search-input:focus {
+            border-color: #91a5be;
+            box-shadow: 0 0 0 3px rgba(136, 153, 255, 0.1);
+        }
+
+        body.dark-mode .clear-search {
+            color: #bbb;
+        }
+
+        body.dark-mode .clear-search:hover {
+            color: #91a5be;
+        }
+
+        body.dark-mode .search-results-count {
+            color: #e4e4e4;
+        }
+
+        body.dark-mode .station-card {
+            background: #3a3a3a;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        body.dark-mode .station-card:hover {
+            border-color: #91a5be;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        body.dark-mode .station-name {
+            color: #fff;
+            border-bottom-color: #91a5be;
+        }
+
+        body.dark-mode .time-label {
+            color: #ccc;
+        }
+
+        body.dark-mode .time-display {
+            background: #2e2e2e;
+            color: #fff;
+        }
+
+        body.dark-mode .time-display.first {
+            color: #27ae60;
+        }
+
+        body.dark-mode .time-display.last {
+            color: #e74c3c;
+        }
+
+        body.dark-mode .spinner {
+            border: 4px solid #3a3a3a;
+            border-top: 4px solid #91a5be;
+        }
+
+        body.dark-mode .time-value {
+            background: #2e2d2d;
+            border-radius: 15px;
+        }
+
 
         @media (max-width: 768px) {
             .header h1 {
@@ -465,9 +661,14 @@
 
             <div class="selector-section">
                 <div class="search-container">
-                    <input type="text" id="stationSearch" class="search-input" placeholder="Select or enter the station name or code:" autocomplete="on">
+                <div class="search-input-wrapper">
+                    <i class="fa-solid fa-search"
+                        style="position: absolute; left: 12px; top: 65%; transform: translateY(-65%); color: #cccccc; z-index: 1;"></i>
+                    <input type="text" id="stationSearch" class="search-input"
+                    placeholder="Select or enter the station name or code." autocomplete="on">
                     <button class="clear-search" id="clearSearch" title="Clear search">&times;</button>
-                    <div class="search-results-count" id="resultsCount"></div>
+                </div>
+                <div class="search-results-count" id="resultsCount"></div>
                 </div>
 
                 <label for="stationDropdown">Station Lists:</label>
@@ -492,8 +693,8 @@
 
 
 
-    <!-- Dark mode image switching for map -->
-    <script src="js/sysMap.js"></script>
+    <script src="js/mob-navtabs.js"></script>
+
     <script src="tdt-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
@@ -511,8 +712,6 @@
     <script src="../js/dstabs.js"></script>
 
     <script src="../js/utils.js"></script>
-
-    <script src="js/menu.js"></script>
 
     <script src="js/ft-lt.js"></script>
 
