2026-02 Feature Update for worksbynrfz

--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -129,8 +129,8 @@
         position: relative;
         z-index: 1;
         min-width: 50px;
-        width: 100px;
-        height: 40px;
+        width: auto;
+        height: auto;
         line-height: 40px;
         font-size: 14px;
         font-weight: 500;
