2026-02 Feature Update for worksbynrfz

--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -195,9 +195,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="delays-tracker/statistics.html" class="nav-link">
-                        <i class="fa-solid fa-chart-bar"></i>
-                        <span>Statistics</span>
+                    <a href="delays-tracker/first-last.html" class="nav-link">
+                        <i class="fa-solid fa-clock"></i>
+                        <span>Timings</span>
                     </a>
                 </li>
                 <li class="nav-item ">
@@ -231,11 +231,11 @@
                 </a>
             </li>
             <li>
-                <a href="delays-tracker/statistics.html">
+                <a href="delays-tracker/first-last.html">
                     <span class="icon">
-                        <i class="fa-solid fa-chart-bar"></i>
+                        <i class="fa-solid fa-clock"></i>
                     </span>
-                    <span class="label">Statistics</span>
+                    <span class="label">Timings</span>
                 </a>
             </li>
             <li>
