--- a/delays-tracker/first-last.html
+++ b/delays-tracker/first-last.html
@@ -558,13 +558,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="statistics.html" class="nav-link">
-                        <i class="fa-solid fa-chart-bar"></i>
-                        <span>Statistics</span>
+                    <a href="first-last.html" class="nav-link active">
+                        <i class="fa-solid fa-clock"></i>
+                        <span>Timings</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="menu.html" class="nav-link active">
+                    <a href="menu.html" class="nav-link">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
@@ -594,11 +594,11 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="first-last.html">
                     <span class="icon">
-                        <i class="fa-solid fa-chart-bar"></i>
+                        <i class="fa-solid fa-clock"></i>
                     </span>
-                    <span class="label">Statistics</span>
+                    <span class="label">Timings</span>
                 </a>
             </li>
             <li class="active">
@@ -626,12 +626,12 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../buszy.html">
+                                    <a href="../delays-tracker.html">
                                         <i class="fa-solid fa-house"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                                    <a href="first-last.html"><i class="fa-solid fa-clock"></i>
                                     </a>
                                 </li>
                             </ol>
