--- a/buszy/art.html
+++ b/buszy/art.html
@@ -199,7 +199,7 @@
 
 
     body.dark-mode .card {
-        background-color: #2e2e2e;
+        background-color: #1c1f2b;
         border: 1px solid #2b2b2b33;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
