--- a/delays-tracker/first-last.html
+++ b/delays-tracker/first-last.html
@@ -247,13 +247,13 @@
         .clear-search {
             position: absolute;
             right: 12px;
-            top: 50%;
             transform: translateY(-50%);
             background: none;
             border: none;
             color: #999;
             cursor: pointer;
-            font-size: 1.2rem;
+            font-size: 35px;
+            top: 26px;
             padding: 0;
             display: none;
             z-index: 10;
@@ -335,7 +335,7 @@
 
 
         body.dark-mode .selector-section {
-            background: #2e2e2e;
+            background: #1c1f2b;
             border: 1px solid #2b2b2b33;
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -350,7 +350,7 @@
             padding: 0.775rem 2.5rem 0.775rem 1.75rem;
             color: #fff;
             appearance: none;
-            background-color: #3a3a3a;
+            background-color: #393e53;
             background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%2391a5be" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"%3E%3Cpolyline points="6 9 12 15 18 9"%3E%3C/polyline%3E%3C/svg%3E');
             background-position: right 0.75rem center;
             background-repeat: no-repeat;
@@ -372,7 +372,7 @@
         }
 
         body.dark-mode .content-section {
-            background: #2e2e2e;
+            background: #1c1f2b;
             border: 1px solid #2b2b2b33;
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -386,7 +386,7 @@
         }
 
         body.dark-mode .direction-card {
-            background: #3a3a3a;
+            background: #2d3242;
             border: 1px solid #2b2b2b33;
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -402,7 +402,7 @@
         }
 
         body.dark-mode .time-row {
-            border-bottom-color: #444;
+            border-bottom-color: #aaaaaa;
         }
 
         body.dark-mode .day-label {
@@ -422,7 +422,7 @@
             width: 100%;
             color: #fff;
             appearance: none;
-            background: #3a3a3a;
+            background: #393e53;
             background-clip: padding-box;
             border-radius: 25px;
             transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -452,7 +452,7 @@
         }
 
         body.dark-mode .station-card {
-            background: #3a3a3a;
+            background: #2d3242;
             border: 1px solid #2b2b2b33;
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
@@ -472,7 +472,7 @@
         }
 
         body.dark-mode .time-display {
-            background: #2e2e2e;
+            background: #1c1f2b;
             color: #fff;
         }
 
@@ -490,7 +490,7 @@
         }
 
         body.dark-mode .time-value {
-            background: #2e2d2d;
+            background: #1c1f2b;
             border-radius: 15px;
         }
 
@@ -661,17 +661,17 @@
 
             <div class="selector-section">
                 <div class="search-container">
-                <div class="search-input-wrapper">
-                    <i class="fa-solid fa-search"
-                        style="position: absolute; left: 12px; top: 65%; transform: translateY(-65%); color: #cccccc; z-index: 1;"></i>
-                    <input type="text" id="stationSearch" class="search-input"
-                    placeholder="Select or enter the station name or code." autocomplete="on">
-                    <button class="clear-search" id="clearSearch" title="Clear search">&times;</button>
-                </div>
-                <div class="search-results-count" id="resultsCount"></div>
+                    <div class="search-input-wrapper">
+                        <i class="fa-solid fa-search"
+                            style="position: absolute; left: 12px; top: 65%; transform: translateY(-65%); color: #cccccc; z-index: 1;"></i>
+                        <input type="text" id="stationSearch" class="search-input"
+                            placeholder="Type the station name or code" autocomplete="on">
+                        <button class="clear-search" id="clearSearch" title="Clear search">&times;</button>
+                    </div>
+                    <div class="search-results-count" id="resultsCount"></div>
                 </div>
 
-                <label for="stationDropdown">Station Lists:</label>
+                <label for="stationDropdown">Station List:</label>
                 <select id="stationDropdown">
                     <option value="">Loading stations...</option>
                 </select>
