--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -209,7 +209,7 @@
     }
 
     .card-title {
-        font-size: 1.2em;
+        font-size: 18px;
         margin: 10px 0;
     }
 
@@ -409,7 +409,7 @@
     }
 
     body.dark-mode .disruption-card {
-        background: #2e2e2e;
+        background: #1c1f2b;
         color: #fff;
         border-radius: 25px;
         padding: 20px;
@@ -451,7 +451,7 @@
     }
 
     body.dark-mode p.no-incidents-reported {
-        background-color: #2e2e2e;
+        background-color: #1c1f2b;
         color: #fff;
         border: 1px solid #2b2b2b33;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
