--- a/delays-tracker/statistics.html
+++ b/delays-tracker/statistics.html
@@ -114,7 +114,11 @@
         display: block;
     }
 
-
+    body.dark-mode .mkbf-line-chart-lrt,
+    body.dark-mode .mkbf-line-chart-mrt {
+        border: 1px solid #2b2b2b33 !important;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1) !important;
+    }
 
     @media (max-width: 994px) {
         .chart-caplets {
