--- a/buszy/art.html
+++ b/buszy/art.html
@@ -209,6 +209,38 @@
         text-align: left !important;
     }
 
+    #incoming-buses-section h3 {
+        color: #000;
+    }
+
+    #incoming-buses-section p {
+        color: #999;
+    }
+
+
+    .ib-time {
+        font-size: 20px;
+        color: #000;
+        text-align: center;
+    }
+
+    .ib-svc {
+        color: #000;
+        font-weight: bold;
+        font-size: 1.5rem;
+        padding: 1rem;
+        border-radius: 8px;
+        text-align: center;
+        width: 100%;
+    }
+
+    body.dark-mode .ib-time {
+        color: #fff;
+    }
+
+    body.dark-mode .ib-svc {
+        color: #000;
+    }
 
     body.dark-mode .card {
         background-color: #1c1f2b;
@@ -234,14 +266,6 @@
         background-color: #2e2e2e;
     }
 
-    #incoming-buses-section h3 {
-        color: #000;
-    }
-
-    #incoming-buses-section p {
-        color: #999;
-    }
-
     body.dark-mode #incoming-buses-section h3 {
         color: #fff;
     }
@@ -250,30 +274,33 @@
         border-color: #444;
     }
 
+    body.dark-mode #incoming-buses-section {
+        background-color: #1c1f2b;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    body.dark-mode #incoming-buses-section h3 {
+        color: #fff;
+    }
+
+    body.dark-mode #incoming-buses-section p {
+        color: #999;
+    }
+
+
     @media (max-width: 768px) {
         #incoming-buses-grid {
-            grid-template-columns: repeat(4, 80px) !important;
-            overflow-x: auto;
+            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr)) !important;
+            overflow-x: visible;
             overflow-y: hidden;
-            gap: 1rem;
-            -webkit-overflow-scrolling: touch;
-            scroll-behavior: smooth;
-        }
-
-        /* Hide scrollbar while keeping scroll functionality */
-        #incoming-buses-grid::-webkit-scrollbar {
-            display: none;
-        }
-
-        #incoming-buses-grid {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
+            gap: 0.5rem;
         }
     }
 
     @media (min-width: 440px) and (max-width: 768px) {
         #incoming-buses-grid {
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)) !important;
+            grid-template-columns: repeat(auto-fit, minmax(100px, -1fr)) !important;
             overflow-x: visible !important;
         }
     }
