--- a/buszy/art.html
+++ b/buszy/art.html
@@ -111,6 +111,10 @@
         color: #000;
         font-weight: bold;
         padding: 5px 10px;
+        display: inline-block;
+        white-space: nowrap;
+        font-size: 20px;
+        width: fit-content;
     }
 
     .bus-time {
@@ -254,9 +258,28 @@
         color: #fff;
     }
 
+    .card .card-header div {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        justify-content: flex-start;
+    }
+
+    .card .card-header .destination-code {
+        font-size: 0.85rem;
+        color: #666;
+        margin-top: 0.15rem;
+        line-height: 1.2;
+    }
+
+    body.dark-mode .card .card-header .destination-code {
+        color: #aaa;
+    }
+
     body.dark-mode .service-no {
         background-color: #7db603;
         color: #000;
+        width: fit-content;
     }
 
     body.dark-mode .leaflet-touch .leaflet-bar a {
