--- a/buszy/art.html
+++ b/buszy/art.html
@@ -231,11 +231,16 @@
     .ib-svc {
         color: #000;
         font-weight: bold;
-        font-size: 1.5rem;
-        padding: 1rem;
-        border-radius: 8px;
+        font-size: 20px;
+        padding: 0.8rem 1rem;
         text-align: center;
         width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0 12px 12px 0;
+        clip-path: polygon(12% 0%, 100% 0%, 100% 100%, 12% 100%, 0% 50%);
+        position: relative;
     }
 
     body.dark-mode .ib-time {
@@ -268,7 +273,7 @@
     .card .card-header .destination-code {
         font-size: 0.85rem;
         color: #666;
-        margin-top: 0.15rem;
+        margin-top: 0.6rem;
         line-height: 1.2;
     }
 
@@ -314,10 +319,14 @@
 
     @media (max-width: 768px) {
         #incoming-buses-grid {
-            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr)) !important;
+            grid-template-columns: repeat(auto-fit, minmax(60px, -1fr)) !important;
             overflow-x: visible;
             overflow-y: hidden;
             gap: 0.5rem;
+        }
+
+        .ib-svc {
+            clip-path: polygon(22% 0%, 100% 0%, 100% 100%, 22% 100%, 0% 50%);
         }
     }
 
@@ -325,6 +334,10 @@
         #incoming-buses-grid {
             grid-template-columns: repeat(auto-fit, minmax(100px, -1fr)) !important;
             overflow-x: visible !important;
+        }
+
+        .ib-svc {
+            clip-path: polygon(22% 0%, 100% 0%, 100% 100%, 22% 100%, 0% 50%);
         }
     }
 
@@ -384,6 +397,10 @@
             margin-left: 0px;
             margin-top: 10px;
             cursor: default;
+        }
+
+        .ib-time {
+            font-size: 18px;
         }
     }
 
