2026-02 Feature Update for worksbynrfz

--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -213,7 +213,6 @@
         margin: 10px 0;
     }
 
-    .line-badge,
     .line-label {
         background: #ff3b3b;
         color: #fff;
@@ -227,44 +226,37 @@
         display: inline-block;
     }
 
-    .line-label.nsl,
-    .line-badge.nsl {
+    .line-label.nsl {
         background: #e1251b;
         color: #fff;
     }
 
-    .line-label.ewl,
-    .line-badge.ewl {
+    .line-label.ewl {
         background: #00953b;
         color: #fff;
     }
 
-    .line-label.ccl,
-    .line-badge.ccl {
+    .line-label.ccl {
         background: #ff9e18;
         color: #000;
     }
 
-    .line-label.dtl,
-    .line-badge.dtl {
+    .line-label.dtl {
         background: #0055b8;
         color: #fff;
     }
 
-    .line-label.nel,
-    .line-badge.nel {
+    .line-label.nel {
         background: #9e28b5;
         color: #fff;
     }
 
-    .line-label.tel,
-    .line-badge.tel {
+    .line-label.tel {
         background: #9d5918;
         color: #fff;
     }
 
-    .line-label.lrt,
-    .line-badge.lrt {
+    .line-label.lrt {
         background: #718472;
         color: #fff;
     }
@@ -367,9 +359,10 @@
         min-width: 0;
     }
 
-    .route-badge .line-badge {
-        margin-right: 8px;
-        margin-bottom: 0;
+    .route-badge img {
+        height: 35px;
+        width: auto;
+        flex-shrink: 0;
     }
 
     .route-badge .route {
