--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -52,9 +52,15 @@
         width: 100%;
         margin: 24px 0;
         box-sizing: border-box;
-        gap: 12px;
+        gap: 16px;
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04);
         transition-duration: 800ms;
+    }
+
+    .custom-list-item img {
+        height: 40px;
+        width: auto;
+        flex-shrink: 0;
     }
 
     .custom-list-item:hover {
@@ -260,55 +266,55 @@
             <div class='alert-last-updated' style='margin-top:12px;font-size:0.98em;color:#888;'></div>
 
             <li class="custom-list-item">
-                <span class="line-label nsl">NSL</span>
+                <img src="delays-tracker/assets/caplets/NSLCap.png" alt="NSL">
                 <span class="line-name">North-South Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label ewl">EWL</span>
+                <img src="delays-tracker/assets/caplets/EWLCap.png" alt="EWL">
                 <span class="line-name">East-West Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label nel">NEL</span>
+                <img src="delays-tracker/assets/caplets/NELCap.png" alt="NEL">
                 <span class="line-name">North East Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label ccl">CCL</span>
+                <img src="delays-tracker/assets/caplets/CCLCap.png" alt="CCL">
                 <span class="line-name">Circle Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label dtl">DTL</span>
+                <img src="delays-tracker/assets/caplets/DTLCap.png" alt="DTL">
                 <span class="line-name">Downtown Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label tel">TEL</span>
+                <img src="delays-tracker/assets/caplets/TELCap.png" alt="TEL">
                 <span class="line-name">Thomson-East Coast Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label lrt">BP</span>
+                <img src="delays-tracker/assets/caplets/BPCap.png" alt="BP">
                 <span class="line-name">Bukit Panjang LRT</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label lrt">SK</span>
+                <img src="delays-tracker/assets/caplets/SKCap.png" alt="SK">
                 <span class="line-name">Sengkang LRT</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
-                <span class="line-label lrt">PG</span>
+                <img src="delays-tracker/assets/caplets/PGCap.png" alt="PG">
                 <span class="line-name">Punggol LRT</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
