--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
 
         /* Dark mode support */
         body.dark-mode .app-card {
-            background: #2a2a2a;
-            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3);
+            background: #1c1f2b;
+            border: 1px solid #2b2b2b33;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         body.dark-mode .app-card:hover {
