--- a/rail-buddy.html
+++ b/rail-buddy.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="manifest" href="manifest-dt.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
 
     <link rel="icon" href="rail-buddy/assets/icon-512.png">
