--- a/rail-buddy/history.html
+++ b/rail-buddy/history.html
@@ -413,7 +413,7 @@
     }
 
     body.dark-mode .route {
-        background: #383838;
+        background: #1c1f2b;
         color: #fff;
         border-radius: 6px;
         padding: 2px 8px;
