--- a/buszy/art.html
+++ b/buszy/art.html
@@ -362,7 +362,7 @@
         .fleet-legend {
             display: flex;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 0.4rem;
             justify-content: center;
             margin-top: 1em;
             padding-bottom: 1em;
@@ -405,6 +405,8 @@
 
         .ib-time {
             font-size: 18px;
+            margin-left: 5px;
+            margin-right: 5px;
         }
     }
 
@@ -428,6 +430,41 @@
             text-align: center;
             display: flex;
             align-items: center;
+        }
+    }
+
+    @media screen and (max-width: 417px) {
+        #incoming-buses-grid {
+            grid-template-columns: repeat(4, 1fr);
+            gap: 0.4rem;
+            padding: 0 0.25rem;
+        }
+
+        .ib-time {
+            font-size: 16px;
+            padding: 6px;
+            margin: 0;
+        }
+
+        .ib-svc {
+            font-size: 16px;
+            padding: 0.6rem 0.5rem;
+            margin: 0;
+        }
+
+        #incoming-buses-section {
+            padding: 0.8rem;
+            margin-bottom: 1.5em;
+        }
+
+        #incoming-buses-section h3 {
+            font-size: 1.1rem;
+            margin-bottom: 0.3rem;
+        }
+
+        #incoming-buses-section p {
+            font-size: 0.8rem;
+            margin-bottom: 0.75rem;
         }
     }
 </style>
