--- a/buszy/art.html
+++ b/buszy/art.html
@@ -631,7 +631,7 @@
             <!-- Incoming Buses Section -->
             <div id="incoming-buses-section" style="display: none; margin-bottom: 2em;">
                 <h3 style="font-weight: bold; margin-bottom: 0.5rem;">Incoming Buses</h3>
-                <p style="font-size: 0.9rem; color: #999; margin-bottom: 1rem; text-align: left;">*buses might not
+                <p style="font-size: 0.9rem; color: #999; margin-bottom: 1rem; text-align: left;">*Buses might not
                     arrive in exact order</p>
                 <div id="incoming-buses-grid" style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem;">
                     <!-- Incoming buses will be populated here -->
