--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
                 min-height: auto;
                 padding: 20px 15px;
             }
+
+            .app-thumbnail-link {
+                margin: 0;
+                height: 220px;
+            }
+
+            .app-thumbnail {
+                height: 220px;
+            }
         }
 
         /* Dark mode support */
@@ -370,16 +379,6 @@
 
 
     <!-- ============================================= Hero Section ============================================= -->
-    <!-- Cover Header -->
-    <!-- <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="hero">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <div class="main-content">
         <section class="wbnrfz-works">
             <div class="container">
