--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -12,7 +12,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="../buszy/assets/icon-512.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -308,6 +308,15 @@
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Announcements</h5>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://www.lta.gov.sg/content/ltagov/en/map/fare-calculator.html"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-menu"><i class="fa-solid fa-external-link"></i> Fare Calculator</h5>
                         </div>
                     </div>
                 </a>
